src/test/deca/context/valid/sansObjet/cond_simple.deca
{
	boolean x;
	x=true;
	if(x==true)
	{
		x=false;
	}
}
