src/test/deca/context/invalid/sansObjet/cast_incomp.deca
{
	bool x=(bool) 2;
}
